* Large text in signature caused horizontal scrolling (style.css, profile.css) [Bug 3507]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8626 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/babylon/style.css
+++ b/Themes/babylon/style.css
@@ -326,7 +326,6 @@ code
 .signature
 {
 	width: 100%;
-	overflow: auto;
 	padding-bottom: 3px;
 	line-height: 1.3em;
 }
