--- a/Themes/default/css/profile.css
+++ b/Themes/default/css/profile.css
@@ -111,14 +111,10 @@
 {
 	width: 100%;
 }
-.signature
-{
-	overflow: auto;
-}
 .signature h5
 {
 	font-size: 100%;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 
 /* Simple feedback messages */
